# TSA-FMICS22

./: Dockerfile  README.md  evaluation.sh
ahorn/: .clang-format  CMakeLists.txt  README.md  main.cpp
ahorn/cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  FindMPFR.cmake  FindZ3.cmake
ahorn/include/ahorn/cfg/: builder.h  cfg.h  edge.h  vertex.h
ahorn/include/ahorn/compiler/: analyzer.h  ast.h  compiler.h  project.h
ahorn/include/ahorn/compiler/grammar/: IEC61131.g4
ahorn/include/ahorn/compiler/pou/: body.h  pou.h
ahorn/include/ahorn/compiler/statement/: assert_statement.h  assignment_statement.h  assume_statement.h  case_statement.h  if_statement.h  invocation_statement.h  iteration_statement.h  selection_statement.h  statement.h  statement_visitor.h  while_statement.h
ahorn/include/ahorn/ir/: interface.h  module.h  name.h  project.h  variable.h
ahorn/include/ahorn/ir/expression/: binary_expression.h  boolean_to_integer_cast.h  change_expression.h  expression.h  expression_visitor.h  field_access.h  integer_to_boolean_cast.h  non_const_expression_visitor.h  phi.h  unary_expression.h  undefined.h  variable_access.h  variable_reference.h
ahorn/include/ahorn/ir/instruction/: assignment_instruction.h  call_instruction.h  goto_instruction.h  havoc_instruction.h  if_instruction.h  instruction.h  instruction_visitor.h  sequence_instruction.h  while_instruction.h
ahorn/include/ahorn/ir/type/: data_type.h  derived_type.h  (+5 more)
ahorn/include/ahorn/pass/: basic_block_pass.h  call_transformation_pass.h  change_annotation_collection_pass.h
ahorn/include/ahorn/sa/: analyzer.h
ahorn/include/ahorn/se/: configuration.h
ahorn/include/ahorn/utilities/: ostream_operators.h
ahorn/src/: CMakeLists.txt
ahorn/src/cfg/: CMakeLists.txt  builder.cpp  cfg.cpp  edge.cpp  vertex.cpp
ahorn/src/compiler/: CMakeLists.txt  analyzer.cpp  ast.cpp  compiler.cpp  project.cpp
ahorn/src/compiler/pou/: body.cpp  pou.cpp
ahorn/src/compiler/statement/: assert_statement.cpp  assignment_statement.cpp  assume_statement.cpp  case_statement.cpp  if_statement.cpp  invocation_statement.cpp  while_statement.cpp
ahorn/src/ir/: CMakeLists.txt  interface.cpp  module.cpp  name.cpp  project.cpp  variable.cpp
ahorn/src/ir/expression/: binary_expression.cpp  boolean_to_integer_cast.cpp  change_expression.cpp  field_access.cpp  integer_to_boolean_cast.cpp  phi.cpp  unary_expression.cpp  undefined.cpp  variable_access.cpp
ahorn/src/ir/instruction/: assignment_instruction.cpp  call_instruction.cpp  goto_instruction.cpp  havoc_instruction.cpp  if_instruction.cpp  instruction.cpp  sequence_instruction.cpp  while_instruction.cpp
ahorn/src/ir/type/: data_type.cpp  derived_type.cpp  elementary_type.cpp  enumerated_type.cpp  inconclusive_type.cpp  safety_type.cpp  simple_type.cpp
ahorn/src/pass/: CMakeLists.txt  basic_block_pass.cpp  call_transformation_pass.cpp  change_annotation_collection_pass.cpp
ahorn/src/pass/ssa/: ssa_encoder.cpp  ssa_pass.cpp
ahorn/src/pass/tac/: encoder.cpp  tac_pass.cpp
ahorn/src/sa/: CMakeLists.txt  analyzer.cpp
ahorn/src/sa/crab/: encoder.cpp  marshaller.cpp
ahorn/src/se/: CMakeLists.txt  configuration.cpp
ahorn/src/se/ahorn/: engine.cpp  merger.cpp
ahorn/src/se/baseline/: engine.cpp
ahorn/src/se/cbmc/: engine.cpp  merger.cpp
ahorn/src/se/experimental/: configuration.cpp  encoder.cpp  engine.cpp  evaluator.cpp  executor.cpp  explorer.cpp  merger.cpp  summarizer.cpp  summary.cpp  symbolic_variable.cpp  test_case.cpp  test_suite.cpp
ahorn/src/se/oa/: engine.cpp  merger.cpp
ahorn/src/se/shadow/: engine.cpp  merger.cpp
ahorn/src/se/simulator/: engine.cpp
ahorn/src/se/smart/: encoder.cpp  engine.cpp  evaluator.cpp  executor.cpp  explorer.cpp
ahorn/test/: CMakeLists.txt  test_lib_cfg.cpp  test_lib_compiler.cpp  test_lib_ir.cpp  test_lib_se.cpp
ahorn/test/benchmark/arcade/: 4.1.DiagnosticsConcept.st  4.4.SafeMotionIO.st  README.md  RTAndroid_flagDelayAsInput.st
ahorn/test/file/: call_recursion.st  chc_call.st  chc_call_in_call.st  chc_cycle_semantics.st  chc_if.st  chc_lower_ir.st  chc_lower_ir_base_case_2.st  chc_lower_ir_base_case_3.st  chc_lower_ir_small_example.st  chc_sub.st  compiler_if.st  compiler_if_else_if.st  ir_call.st  ir_case.st  ir_empty_if.st  ir_empty_if_else_if_else.st  ir_empty_if_empty_else_if_else.st  ir_enum.st  ir_if.st  ir_if_change.st  ir_if_else_if.st  ir_if_empty_else.st  ir_if_empty_else_if_else.st  ir_if_empty_then.st  ir_if_numeral.st  ir_while.st  parse_in_order.st  pdg_call.st  pdg_example.st  sa_call.st  sa_call_parameters.st  sa_enum.st  sa_if_negation.st  sa_or.st  sa_ton.st  se_engine_if.st  se_engine_if_in_callee.st  se_engine_nested_ifs.st  se_executor_call_local_path_constraints.st  se_executor_call_with_state.st  (+14 more)
ahorn/test/file/ir/: call_completion.st
ahorn/test/file/regression/: ir_hagedorn.st
ahorn/test/file/se/: antivalent_test.st  assignment.st  branch_coverage_in_3_cycles.st  breadth-first_and_merging.st  call.st  call_coverage_in_1_cycle_with_change_shadow.st  call_two_times.st  call_with_state.st  call_with_stateful_if.st  call_with_tripple_diamond.st  constant_propagation.st  constant_propagation_with_input.st  constant_propagation_with_shadows.st  dependant_on_call.st  different_frame_stacks.st  emergency_stop_test.st  if.st  if_change.st  if_reaching_change.st  if_with_state.st  merge_if_call.st  mode_selector_test.st  non_deterministic_if.st  unreachable_if.st  while.st  while_with_if.st
ahorn/test/lib_pass/: test_lib_pass_ssa.cpp  test_lib_pass_tac.cpp
ahorn/test/lib_sa/: test_lib_sa.cpp
ahorn/test/lib_sa/file/: field_access_of_callee.st  modified_antivalent.st  unreachable_branch_in_call.st  unreachable_branch_realizable_path.st  unreachable_branches_of_antivalent.st
ahorn/test/lib_se/: test_lib_se_ahorn.cpp  test_lib_se_arcade.cpp  test_lib_se_baseline.cpp  test_lib_se_cbmc.cpp  test_lib_se_oa.cpp  test_lib_se_shadow.cpp  test_lib_se_simulator.cpp  test_lib_se_smart.cpp
ahorn/test/lib_se/file/: toy_example_kuchta_et_al.st  toy_example_kuchta_et_al_with_change_annotation.st
(+470 files in other folders)
